--- a/src/web/components/app/_index.scss
+++ b/src/web/components/app/_index.scss
@@ -8,6 +8,19 @@ body {
 	font-family: sans-serif;
 }
 
-h1 {
-	text-align: center;
+tash-app {
+	display: grid;
+	grid-gap: 1em;
+	grid-template-columns: 1fr 1fr 1fr;
+
+	// enlarge heading and first project -- XXX: special-casing
+	> :nth-child(1),
+	> :nth-child(2) {
+		grid-column-start: span 3;
+	}
+
+	h1 {
+		margin: 0.5em 0 0;
+		text-align: center;
+	}
 }
