switched to complate-dom for client-side rendering
unfortunately, lit-html proved to be too cumbersome after all (cf.
bbd59b05c0189d0d38902e540d6156946303c94f) - both because markup seems
insufficiently declarative and because passing properties in addition to
attributes requires lit-extended (which goes way too far for my taste)

--- a/src/web/components/tasks/_index.scss
+++ b/src/web/components/tasks/_index.scss
@@ -21,13 +21,13 @@ ul.tasks > li {
 	}
 
 	// colors adapted from Bootstrap
-	&[data-priority=A] {
+	&.priority-a {
 		background-color: #F2DEDE;
 	}
-	&[data-priority=B] {
+	&.priority-b {
 		background-color: #FCF8E3;
 	}
-	&[data-priority=C] {
+	&.priority-c {
 		background-color: #D9EDF7;
 	}
 
