added preliminary task-promotion button

--- a/src/web/components/tasks/_index.scss
+++ b/src/web/components/tasks/_index.scss
@@ -43,6 +43,11 @@ ul.tasks > li {
 		}
 	}
 
+	ul.controls {
+		list-style-type: none;
+		padding: 0;
+	}
+
 	ul.contexts {
 		list-style-type: none;
 
